# repos9

1744830984-WayfireWM-wayfire/: .gitignore  README.md  meson.build  meson_options.txt  wayfire.desktop
1744830984-WayfireWM-wayfire/.github/workflows/: ci.yaml
1744830984-WayfireWM-wayfire/man/: wayfire.1.in
1744830984-WayfireWM-wayfire/metadata/: animate.xml  blur.xml  core.xml  cube.xml  decoration.xml  expo.xml  extra-gestures.xml  grid.xml  input-device.xml  input-method-v1.xml  input.xml  meson.build  oswitch.xml  output.xml  scale.xml  session-lock.xml  shortcuts-inhibit.xml  simple-tile.xml  switcher.xml  vswipe.xml  vswitch.xml  wayfire-shell.xml  workarounds.xml  wsets.xml  xdg-activation.xml  zoom.xml
1744830984-WayfireWM-wayfire/plugins/: meson.build
1744830984-WayfireWM-wayfire/plugins/animate/: animate.cpp  animate.hpp  basic_animations.hpp  meson.build  spin.hpp  squeezimize.hpp  system_fade.hpp  unmapped-view-node.hpp  zap.hpp
1744830984-WayfireWM-wayfire/plugins/animate/fire/: fire.cpp  fire.hpp  particle.cpp  particle.hpp
1744830984-WayfireWM-wayfire/plugins/blur/: blur.cpp  meson.build
1744830984-WayfireWM-wayfire/plugins/common/: meson.build  move-drag-interface.cpp  workspace-wall.cpp
1744830984-WayfireWM-wayfire/plugins/cube/: cube.cpp  cube.hpp  meson.build
1744830984-WayfireWM-wayfire/plugins/decor/: deco-layout.cpp  deco-layout.hpp  deco-subsurface.cpp  deco-theme.cpp  deco-theme.hpp  decoration.cpp  meson.build
1744830984-WayfireWM-wayfire/plugins/grid/: grid.cpp  meson.build
1744830984-WayfireWM-wayfire/plugins/grid/wayfire/plugins/: crossfade.hpp  grid.hpp
1744830984-WayfireWM-wayfire/plugins/ipc/: ipc-activator.hpp  ipc-helpers.hpp  ipc-method-repository.hpp  ipc.cpp  ipc.hpp  meson.build  stipc.cpp
1744830984-WayfireWM-wayfire/plugins/ipc-rules/: ipc-events.hpp  ipc-input-methods.hpp  ipc-rules-common.hpp  ipc-rules.cpp  ipc-utility-methods.hpp  meson.build
1744830984-WayfireWM-wayfire/plugins/pch/: plugin_pch.hpp
1744830984-WayfireWM-wayfire/plugins/protocols/: foreign-toplevel.cpp  gtk-shell.cpp  input-method-v1.cpp  input-method-v1.hpp  meson.build  session-lock.cpp  shortcuts-inhibit.cpp  text-input-v1-v3.hpp  wayfire-shell.cpp  xdg-activation.cpp
1744830984-WayfireWM-wayfire/plugins/scale/: meson.build  scale-title-overlay.cpp  scale.cpp
1744830984-WayfireWM-wayfire/plugins/single_plugins/: alpha.cpp  autostart.cpp  command.cpp  expo.cpp  extra-gestures.cpp  idle.cpp  meson.build  move.cpp  oswitch.cpp  preserve-output.cpp  resize.cpp  switcher.cpp  vswipe-processing.hpp  vswipe.cpp  wrot.cpp  wsets.cpp  xkb-bindings.cpp  zoom.cpp
1744830984-WayfireWM-wayfire/plugins/tile/: meson.build  tile-dragging.hpp  tile-ipc.hpp  tile-plugin.cpp  tile-wset.hpp  tree-controller.cpp  tree-controller.hpp  tree.cpp  tree.hpp
1744830984-WayfireWM-wayfire/plugins/vswitch/: meson.build  vswitch.cpp
1744830984-WayfireWM-wayfire/plugins/vswitch/wayfire/plugins/: vswitch.hpp
1744830984-WayfireWM-wayfire/plugins/window-rules/: meson.build  view-action-interface.cpp  view-action-interface.hpp  window-rules.cpp
1744830984-WayfireWM-wayfire/plugins/wm-actions/: meson.build  wm-actions.cpp
1744830984-WayfireWM-wayfire/plugins/wobbly/: meson.build  wobbly.c  wobbly.cpp
1744830984-WayfireWM-wayfire/proto/: meson.build
1744830984-WayfireWM-wayfire/src/: debug.cpp  default-config-backend.cpp  geometry.cpp  json.cpp  main.cpp  main.hpp  meson.build  region.cpp  util.cpp
1744830984-WayfireWM-wayfire/src/api/wayfire/: bindings-repository.hpp  config-backend.hpp  core.hpp  debug.hpp  geometry.hpp  idle.hpp  object.hpp  option-wrapper.hpp  output-layout.hpp  output.hpp  per-output-plugin.hpp  plugin.hpp  render-manager.hpp  scene-render.hpp  scene.hpp  seat.hpp  signal-definitions.hpp  signal-provider.hpp  toplevel.hpp  view-transform.hpp  view.hpp
1744830984-WayfireWM-wayfire/src/api/wayfire/nonstd/: json.hpp  observer_ptr.h  tracking-allocator.hpp  wlroots-full.hpp  wlroots.hpp
1744830984-WayfireWM-wayfire/src/api/wayfire/txn/: transaction-object.hpp
1744830984-WayfireWM-wayfire/src/api/wayfire/unstable/: translation-node.hpp  wlr-subsurface-controller.hpp  (+6 more)
1744830984-WayfireWM-wayfire/src/core/: core-impl.hpp  core.cpp  idle.cpp  object.cpp  opengl.cpp  output-layout.cpp  plugin-loader.cpp  plugin-loader.hpp  plugin.cpp  scene.cpp  view-access-interface.cpp  window-manager.cpp  wm.cpp
1744830984-WayfireWM-wayfire/src/core/seat/: bindings-repository-impl.hpp  bindings-repository.cpp  cursor.cpp  cursor.hpp  drag-icon.cpp  drag-icon.hpp  hotspot-manager.cpp  hotspot-manager.hpp  input-manager.cpp  input-manager.hpp  input-method-popup.cpp  input-method-relay.cpp  input-method-relay.hpp  keyboard.cpp  pointer.cpp  pointer.hpp  pointing-device.cpp  pointing-device.hpp  seat-impl.hpp  seat.cpp  tablet.cpp  touch.cpp  touch.hpp
1744830984-WayfireWM-wayfire/src/core/txn/: transaction-manager-impl.hpp  transaction.cpp
1744830984-WayfireWM-wayfire/src/output/: output-impl.hpp  output.cpp  render-manager.cpp  workarea.cpp  workspace-impl.cpp
1744830984-WayfireWM-wayfire/src/version/: git-branch.cpp.in  git-commit.cpp.in
1744830984-WayfireWM-wayfire/src/view/: toplevel-node.cpp  toplevel-view.cpp  translation-node.cpp  view-3d.cpp  view-impl.cpp  view-impl.hpp  view.cpp  wlr-subsurface-controller.cpp  wlr-surface-controller.cpp  wlr-surface-node.cpp  wlr-surface-pointer-interaction.hpp  wlr-surface-touch-interaction.cpp  xdg-shell.cpp  xdg-shell.hpp  xwayland.cpp
1744830984-WayfireWM-wayfire/src/view/layer-shell/: layer-shell-node.cpp  layer-shell.cpp
1744830984-WayfireWM-wayfire/src/view/xdg-shell/: xdg-toplevel-view.cpp  xdg-toplevel-view.hpp  xdg-toplevel.cpp  xdg-toplevel.hpp
1744830984-WayfireWM-wayfire/src/view/xwayland/: xwayland-toplevel-view.hpp  xwayland-toplevel.cpp  xwayland-toplevel.hpp  xwayland-unmanaged-view.hpp  xwayland-view-base.cpp  xwayland-view-base.hpp
1744830984-WayfireWM-wayfire/test/misc/: meson.build  tracking-allocator.cpp
1744830984-WayfireWM-wayfire/test/txn/: transaction-test.cpp
(+279 files in other folders)
